fix trxChargeDate